--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,6 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-/gradle
 /.gradle/
 
 .classpath
@@ -38,3 +37,7 @@ bin/
 /lib/thingworx*.jar
 
 lib/flightgear-control-*-app.jar
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
